istio/networking/backendapi-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backendapi
  namespace: backendapi
spec:
  hosts:
    - "*"
  gateways:
    - backendapi-gateway
  http:
    - match:
        - uri:
            exact: /weatherforecast
      route:
        - destination:
            host: backendapi
            port:
              number: 8080
